<resources>
    <string name="app_name">ButtonMasher</string>
    <string name="title_play">ButtonMasher</string>
    <string name="time_left">Time Left:</string>
    <string name="user_score">User Clicks:</string>
    <string name="cpu_score">Computer Clicks:</string>
    <string name="click">Click!</string>
    <string name="start">Start!</string>
    <string name="zero_string">0</string>
    <string name="clicks_count">Clicks:</string>

    <string name="title_shop">Shop</string>
    <string name="purchase">Purchase</string>

    <string name="title_settings">Settings</string>
    <string name="app_settings">Settings</string>
    <string name="general_settings">General</string>
    <string name="name_setting">Name:</string>
    <string name="name_summary">Your display name</string>
    <string name="name_dialog">Enter your display name:</string>
    <string name="status_setting">Status"</string>
    <string name="status_summary">Your status message</string>
    <string name="status_dialog">Enter your status message:</string>
    <string name="setting2">Setting2</string>
    <string name="subsetting2">Setting2</string>
</resources>