<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_play">

    <fragment
        android:id="@+id/navigation_play"
        android:name="com.example.buttonmasher.ui.Play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.buttonmasher.ui.Shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/list_settings"
        android:name="com.example.buttonmasher.ui.Settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@xml/list_settings" />

    <fragment
        android:id="@+id/general_settings"
        android:name="com.example.buttonmasher.ui.Settings.GeneralSettings"
        android:label="@string/title_settings"
        tools:layout="@xml/general_preferences" />

</navigation>