<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Play.PlayFragment">

    <TextView
        android:id="@+id/cpuScoreLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:editable="false"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/cpu_score"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cpuScoreBox"
        app:layout_constraintEnd_toStartOf="@+id/userScoreBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLabel"
        app:layout_constraintVertical_bias="0.593" />

    <EditText
        android:id="@+id/cpuScoreBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:text="@string/zero_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userScoreBox" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:enabled="false"
        android:text="@string/click"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpuScoreLabel" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:editable="false"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/user_score"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/userScoreBox"
        app:layout_constraintEnd_toStartOf="@+id/userScoreBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/userScoreBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:text="@string/zero_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLeft" />

    <EditText
        android:id="@+id/timeLeft"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:text="@string/zero_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:text="@string/time_left"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/timeLeft"
        app:layout_constraintEnd_toStartOf="@+id/timeLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickButton" />
</androidx.constraintlayout.widget.ConstraintLayout>