<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Shop.ShopFragment">

    <TextView
        android:id="@+id/clickCount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:text="@string/clicks_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalClicks"
        app:layout_constraintEnd_toStartOf="@+id/totalClicks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/totalClicks"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:text="@string/zero_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/purchase1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/purchase1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalClicks" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="+1/Click"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/purchase1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickCount" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:text="Cost: 300 Clicks"
        app:layout_constraintBottom_toBottomOf="@+id/purchase1"
        app:layout_constraintEnd_toStartOf="@+id/purchase1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>